--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -1,6 +1,9 @@
 body {
     background-color: var(--black);
     color: white;
+    font-family: "Inria Sans", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 :root {
     --black: #131313;
