--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("/images/bg.jpg");
+    background-image: url("./images/bg.jpg");
     color: white;
     font-family: "Inria Sans", sans-serif;
     font-weight: 400;
@@ -31,15 +31,18 @@ body {
 .presentation {
     max-width: 600px;
 }
-.competances {
-    text-align: center;
-}
 
 .flex-wrap {
     flex-wrap: wrap;
 }
 .gap-comp {
-    gap: 12px;
+    gap: 15px;
+}
+
+.competences div:hover{
+    background-color: rgb(18, 102, 158);
+    border: solid 12px rgb(4, 22, 32);
+    border-radius: 20px;
 }
 
 .flex-direction-colums {
@@ -80,3 +83,51 @@ img {
 .topPadding{
 padding-top: 20px;
 }
+
+@import url('https://fonts.googleapis.com/css?family=Roboto:700');
+
+p {
+  text-shadow: 0 0 7px rgba(255,255,255,.3), 0 0 3px rgba(255,255,255,.3);
+}
+.container {
+  color: #e5e5e5;
+  font-size: 2.26rem;
+  text-transform: uppercase;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.animation {
+  height:50px;
+  overflow:hidden;
+  margin-left: 1rem;
+}
+
+.animation > div > div {
+  padding: 0.25rem 0.75rem;
+  height:2.81rem;
+  margin-bottom: 2.81rem;
+  display:inline-block;
+}
+
+.animation div:first-child {
+  animation: text-animation 8s infinite;
+}
+
+.first div {
+  background-color:#20a7d8;
+}
+.second div {
+  background-color:#CD921E;
+}
+
+@keyframes text-animation {
+  0% {margin-top: 0;}
+  10% {margin-top: 0;}
+  20% {margin-top: -5.62rem;}
+  30% {margin-top: -5.62rem;}
+  90% {margin-top: 0;}
+  100% {margin-top: 0;}
+}
+
