--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -2,8 +2,8 @@ body {
     background-image: url("./images/bg.jpg");
     color: white;
     font-family: "Inria Sans", sans-serif;
-    font-weight: 400;
-    font-style: normal;
+    font-weight: 500;
+    font-size:larger;
 }
 :root {
     --black: #131313;
@@ -43,6 +43,7 @@ body {
     background-color: rgb(18, 102, 158);
     border: solid 12px rgb(4, 22, 32);
     border-radius: 20px;
+    font-weight: bold;
 }
 
 .flex-direction-colums {
@@ -91,7 +92,7 @@ p {
 }
 .container {
   color: #e5e5e5;
-  font-size: 2.26rem;
+  font-size: 2rem;
   text-transform: uppercase;
   display: flex;
   align-items: center;
@@ -106,7 +107,7 @@ p {
 
 .animation > div > div {
   padding: 0.25rem 0.75rem;
-  height:2.81rem;
+  height: 2.3rem;
   margin-bottom: 2.81rem;
   display:inline-block;
 }
@@ -125,9 +126,24 @@ p {
 @keyframes text-animation {
   0% {margin-top: 0;}
   10% {margin-top: 0;}
-  20% {margin-top: -5.62rem;}
-  30% {margin-top: -5.62rem;}
-  90% {margin-top: 0;}
-  100% {margin-top: 0;}
+  20% {margin-top: -5.30rem;}
+  30% {margin-top: -5.30rem;}
+ 
+}
+
+@media screen and (max-width: 769px){ 
+    @keyframes text-animation {
+        0% {margin-top: 0;}
+        10% {margin-top: 0;}
+        20% {margin-top: -4.2rem;}
+        30% {margin-top: -4.2rem;}
+        90% {margin-top: 0;}
+        100% {margin-top: 0;}
+      }
+
+      .second div {
+        background-color:#CD921E;
+        font-size:medium;
+      }
 }
 
