--- a/cours/style.css
+++ b/cours/style.css
@@ -1,10 +1,31 @@
-.tab1:hover{
+.tab1:hover {
     text-align: center;
     font-weight: bolder;
     background-color: #1a86b8;
 }
-.tab2:hover{
+
+.tab2:hover {
     text-align: center;
     font-weight: bolder;
     background-image: url(images/sideR_1a.jpg);
 }
+
+.Entre input {
+    background-color: #1a86b8;
+    border: double 3px; /* Définit une bordure double noire de 3px */
+}
+
+.sub input{
+    background-color: rgb(0, 195, 255);
+}
+/*
+.taporiginale{
+    border: 2px solid black;
+}
+*/
+
+.para1{
+    background-color: yellow;
+    width: 600px;
+    
+}   
